# PiPiOC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: pipi.cmake
docs/conan/: README.md  conanfile.txt  ios_profile
scripts/: build-ios.sh  prepare-ios.sh  prepare-macosx.sh
src/main/: CMakeLists.txt  main.m  main.mm
src/pipioc/: CMakeLists.txt  PiPiOCEditPdfAdapter+Internal.h  PiPiOCEditPdfAdapter.h  PiPiOCEditPdfAdapter.mm  PiPiOCExceptionName.h  PiPiOCExceptionName.m  PiPiOCExtractPdfAdapter+Internal.h  PiPiOCExtractPdfAdapter.h  PiPiOCExtractPdfAdapter.mm  PiPiOCFillPdfAdapter+Internal.h  PiPiOCFillPdfAdapter.h  PiPiOCFillPdfAdapter.mm  PiPiOCFontManageAdapter+Internal.h  PiPiOCFontManageAdapter.h  PiPiOCFontManageAdapter.mm  PiPiOCFontRegisterAdapter+Internal.h  PiPiOCFontRegisterAdapter.h  PiPiOCFontRegisterAdapter.mm  PiPiOCMultiOperator+Internal.h  PiPiOCMultiOperator.h  PiPiOCMultiOperator.m  PiPiOCMultiPdfOperator+Internal.h  PiPiOCMultiPdfOperator.h  PiPiOCMultiPdfOperator.m  PiPiOCMultiPdfOperatorAdapter+Internal.h  PiPiOCMultiPdfOperatorAdapter.h  PiPiOCMultiPdfOperatorAdapter.mm  PiPiOCOperatePdfAdapter+Internal.h  PiPiOCOperatePdfAdapter.h  PiPiOCOperatePdfAdapter.mm  PiPiOCPagePdfAdapter+Internal.h  PiPiOCPagePdfAdapter.h  PiPiOCPagePdfAdapter.mm  PiPiOCPdfEditor+Internal.h  PiPiOCPdfEditor.h  PiPiOCPdfEditor.m  PiPiOCPdfEditor.mm  PiPiOCPdfExtractor.h  PiPiOCPdfExtractor.m  PiPiOCPdfField.h  (+20 more)
